TAG:  qcreports_db-21-0-3-mgi298-1
DATE: 02/23/2004
STAFF: lec
RELEASE: A
CHANGES:
a) TR 5591; GO reports
b) MRK_NoSequence.py; HMD_MouseSeq1.py; HMD_MouseSeq2.sql

TAG:  qcreports_db-21-0-3-mgi298_BP
DATE: 02/11/2004
STAFF: lec
RELEASE: A
CHANGES:
a) branch point for MGI 2.98 branch

TAG:  qcreports_db-21-0-3
DATE: 02/11/2004
STAFF: lec
RELEASE: A
CHANGES:
a) HMD_RatNoSeq.sql; include RefSeq

TAG:  qcreports_db-21-0-2
DATE: 01/29/2004
STAFF: lec
RELEASE: A
CHANGES:
a) TR 5139; exclude phenotypic mutants; 
   MRK_InterimByDate.sql
   MRK_InterimByRef.sql
   MRK_NoSequence.py

TAG:  qcreports_db-jsam_BP
DATE: 01/27/2004
STAFF: lec
RELEASE: A
CHANGES:
a) branch point tag for JSAM branch

TAG:  qcreports_db-21-0-1
DATE: 12/29/2003
STAFF: lec
RELEASE: A
CHANGES:
a) TR 5449; MRK_SharedSynonyms.py

TAG:  qcreports_db-21-0-0
DATE: 12/18/2003
STAFF: lec
RELEASE: A
CHANGES:
a) TR 5327; converted NOMEN reports

TAG:  no tag
DATE: 12/17/2003
STAFF: lec
RELEASE: A
CHANGES:
a) never added TR 5294 (HMD_SymbolDiffs) reports to CVS

TAG:  qcreports_db-20-0-24
DATE: 12/10/2003
STAFF: dbm
RELEASE: A
CHANGES:
a) Include clone loader reports

TAG:  qcreports_db-20-0-23
DATE: 12/09/2003
STAFF: lec
RELEASE: A
CHANGES:
a) TR 5391; ALL_Progress.sql

TAG:  no tag
DATE: 12/01/2003
STAFF: lec
RELEASE: A
CHANGES:
a) TR 5359; MRK_NomenNotInformative2.sql

TAG:  no tag
DATE: 11/25/2003
STAFF: lec
RELEASE: A
CHANGES:
a) SEQ_GenBank.py ; removed newlines from accids

TAG:  qcreports_db-20-0-22
TAG:  qcreports_db-20-0-21
DATE: 11/20/2003
STAFF: lec
RELEASE: A
CHANGES:
a) TR 5333; GXD_MechDev.sql, GXD_GeneExprPatterns.sql,
   GXD_DevBiol.sql, GXD_Development.sql
b) TR 5294; HMD_SymbolDiffs1.sql, HMD_SymbolDiffs2.sql, MRK_NomenNotInformative.sql
TAG:  no tag
DATE: 11/06/2003
STAFF: lec
RELEASE: A
CHANGES:
a) NOMEN_pending.py - convert from "-pending" to Marker Status "interim"
b) VOC_InvalidInferred.py - new for GO Annoations (TR 5311)

TAG:  no tag
DATE: 11/05/2003
STAFF: lec
RELEASE: A
CHANGES: