@@ -162,6 +162,9 @@ be used at times to test reports for <I>future</I> public consumption.)
 <LI><A HREF="/usrlocalmgi/qcreports_db/output/GXD_Development.sql.rpt">Development papers to full code</A>
 <LI><A HREF="/usrlocalmgi/qcreports_db/output/GXD_SpecTheilerAge.rpt">GXD Specimens with incompatible Theiler stages and ages</A>
 <LI><A HREF="/usrlocalmgi/qcreports_db/output/GXD_KnockInGene.sql.rpt">GXD Knock Ins where the assayed Gene is not the Gene which is mutated in the Genotype</A>
+<LI><A HREF="/usrlocalmgi/qcreports_db/output/GXD_GenotypeRef.rpt">References associated with different GXD and Pheno Genotypes</A>
+<LI><A HREF="/usrlocalmgi/qcreports_db/output/GXD_WildType.sql.rpt">Genotypes where Allele 1 is "wild type"</A>
+<LI><A HREF="/usrlocalmgi/qcreports_db/output/GXD_GenotypeNA.sql.rpt">GXD Annotations to "Not Applicable" Genotype</A>
 </OL>
 
 <A NAME="go"><B>GO</B></A>
