@@ -1,3 +1,10 @@
+TAG:  qcreports_db-21-0-3-mgi298-2
+DATE: 03/01/2004
+STAFF: lec
+RELEASE: A
+CHANGES:
+a) TR 5595; Genotype reports (GXD_WildType.sql, GXD_GenotypeNA.sql, GXD_GenotypeRef.py)
+
 TAG:  qcreports_db-21-0-3-mgi298-1
 DATE: 02/23/2004
 STAFF: lec
